# fin4cast

./: .env  Insomnia.json  README.md  pyproject.toml
app/: main.py  schema.py  security.py
app/api/: author.py  entry.py
app/models/: author.py  commons.py  entry.py
app/schema/: author.py  entry.py
sql/: create-tables.sql
